holy shit the front end To do: 	Style editor layout and buttons 	display the project's code in the input 	style modal and buttons 	add Rename and copy functions 	** would be nice to have a delete confirmation modal or something similar ** Done: 	make new project 	recover project 	delete project 	remove project forever 	the routes work

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -3,19 +3,14 @@
   width: 100vw;
   height: 100vh;
   display: grid;
-  grid-template-columns: [left] 12em [vert-div] repeat(3, minmax(200px, 1fr));
-  grid-template-rows: [top] 4em [horz-div] 3em [p] 1fr;
-  grid-template-areas: "logo . . ." ". header header header" "nav content content content";
+  grid-template-rows: [top] 4em [horz-div] 5em [p] 1fr;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   align-items: start;
   justify-items: stretch;
   justify-content: stretch;
   overflow-x: hidden;
-}
-
-button {
-  margin: 10px;
-  display: inline-block;
+  grid-template-columns: [left] 14em [vert-div] repeat(3, minmax(200px, 1fr));
+  grid-template-areas: "nav bar bar bar" "nav header header header" "nav content content content";
 }
 
 /*# sourceMappingURL=home.module.css.map */
