--- a/src/styles/scss/_base.scss
+++ b/src/styles/scss/_base.scss
@@ -30,20 +30,34 @@ $header-fontsize: 1.2em;
     font-size: $reg-fontsize;
 }
 
-@mixin grid-display() {
+@mixin display-basics() {
     margin: 0;
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-columns: [left] 12em [vert-div] repeat(3, minmax(200px, 1fr));
-    grid-template-rows: [top] 4em [horz-div] 3em [p] 1fr;
-    grid-template-areas: 
-        "logo . . ."
-        ". header header header"
-        "nav content content content";
+    grid-template-rows: [top] 4em [horz-div] 5em [p] 1fr;
     font-family: $font-stack;
     align-items: start;
     justify-items: stretch;
     justify-content: stretch;
     overflow-x: hidden;
+}
+
+
+@mixin grid-display() {
+    @include display-basics;
+    grid-template-columns: [left] 14em [vert-div] repeat(3, minmax(200px, 1fr));
+    grid-template-areas: 
+        "nav bar bar bar"
+        "nav header header header"
+        "nav content content content";
+}
+
+@mixin editor-display() {
+    @include display-basics;
+    grid-template-columns: [left] 14em [vert-div] repeat(2, minmax(200px, 1fr));
+    grid-template-areas: 
+        "nav bar bar"
+        "nav header header"
+        "nav editor output";
 }
