--- a/src/styles/scss/button.scss
+++ b/src/styles/scss/button.scss
@@ -35,15 +35,12 @@
    //  background-color: #FFFF;
     // display: grid;
     align-items: center;
-    vertical-align: margin-top;
-    //padding-right: 2em;
     margin-right: 3em;
-    height: 30px;
-    width: 30px;
+    padding-right: .1em;
+    padding-left: .1em;
 }
 
 .icon {
-    align-items: center;
     height: 30px;
     width: 30px;
 }
