--- a/src/styles/editor.module.css
+++ b/src/styles/editor.module.css
@@ -1,8 +1,47 @@
-.input {
+.editor {
   word-wrap: hard;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   grid-area: editor;
+}
+
+.input {
+  height: 100vh;
+}
+
+.editorPage {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: [top] 4em [horz-div] 5em [p] 1fr;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  align-items: start;
+  justify-items: stretch;
+  justify-content: stretch;
+  overflow-x: hidden;
+  grid-template-columns: [left] 14em [vert-div] repeat(2, minmax(200px, 1fr));
+  grid-template-areas: "nav bar bar" "nav header header" "nav editor output";
+}
+
+.projectTitle {
+  background-color: #303F9F;
+  color: #EFF1FF;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 1.1em;
+  grid-area: bar;
+  padding: 2rem;
+  justify-content: start;
+}
+
+.projectText {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 1.2em;
+  margin: auto;
+  width: 38%;
+  float: left;
 }
 
 /*# sourceMappingURL=editor.module.css.map */
