--- a/src/styles/scss/editor.scss
+++ b/src/styles/scss/editor.scss
@@ -1,10 +1,35 @@
 @use 'base';
 
-.input {
+.editor {
     // resizeable? 
     word-wrap: hard;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     grid-area: editor;
 }
 
+.input {
+    height: 100vh;
+}
+
+
+.editorPage {
+    @include base.editor-display
+}
+
+.projectTitle {
+    @include base.dark-basics;
+    grid-area: bar;
+    padding: 2rem;
+    justify-content: start;
+}
+
+.projectText {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: base.$header-fontsize;
+    margin: auto;
+    width: 38%;
+    float: left;
+}
