--- a/src/styles/scss/modal.scss
+++ b/src/styles/scss/modal.scss
@@ -4,11 +4,12 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba($color: #000000, $alpha: 0.35);
+    background-color: rgba($color: #000000, $alpha: 0.50);
+    backdrop-filter: blur(10px);
   
-    //display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     //display: flex;
   
     .modal {
@@ -23,8 +24,27 @@
 
   
       background-color: rgba(255, 255, 255, 0.35);
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(2px);
       box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+    }
+}
+
+.header {
+    position: relative;
+    padding-bottom: 1rem;
+    color: white;
+    //border-bottom: 1px solid #dddddd;
+}
+
+.input {
+  height: 2em;
+  font-size: 20px;
+}
+
+.footer {
+    padding: 1rem 0;
+    padding-bottom: 0;
+}
   
       // &_header {
       //   position: relative;
@@ -85,5 +105,3 @@
       //     }
       //   }
       // }
-    }
-  }
