--- a/src/styles/scss/editor.scss
+++ b/src/styles/scss/editor.scss
@@ -10,6 +10,8 @@
 
 .input {
     height: 100vh;
+    width: 100%;
+    grid-area: editor;
 }
 
 
@@ -20,7 +22,8 @@
 .projectTitle {
     @include base.dark-basics;
     grid-area: bar;
-    padding: 2rem;
+    padding: 1.5rem;
+    overflow: none;
     justify-content: start;
 }
 
@@ -32,4 +35,18 @@
     margin: auto;
     width: 38%;
     float: left;
+}
+
+.output {
+    height: 100vh;  
+    width: 100%;
+    grid-area: output;
+}
+.buttonHeader {
+    grid-area: header;
+    display: flex;
+    justify-content: space-around;
+    background-color: base.$primary-color;
+    // padding: 2rem;
+    height: 100%
 }
