--- a/src/styles/scss/modal.scss
+++ b/src/styles/scss/modal.scss
@@ -1,3 +1,5 @@
+@use 'base';
+
 .modalContainer {
     position: fixed;
     top: 0;
@@ -6,7 +8,7 @@
     right: 0;
     background-color: rgba($color: #000000, $alpha: 0.50);
     backdrop-filter: blur(10px);
-  
+    font-family: base.$font-stack;
     // display: flex;
     // justify-content: center;
     // align-items: center;
@@ -21,7 +23,7 @@
       border-radius: 20px;
       top: 40%; 
       left: 40%;
-
+      font-size: base.$header-fontsize;
   
       background-color: rgba(255, 255, 255, 0.35);
       backdrop-filter: blur(2px);
@@ -41,9 +43,16 @@
   font-size: 20px;
 }
 
+input:invalid {
+  border: 2px dashed red;
+  background-color: red;
+}
+
 .footer {
     padding: 1rem 0;
     padding-bottom: 0;
+    display: flex;
+    justify-content: space-between;
 }
   
       // &_header {
