--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -10,6 +10,16 @@
   display: inline-block;
 }
 
+.lineButton {
+  background: #FFFFFF;
+  border-radius: 30px;
+  text-align: center;
+  padding: 0.5em;
+  height: 50%;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 1em;
+}
+
 .navButton:hover {
   cursor: pointer;
 }
