--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -6,6 +6,7 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .modalContainer .modal {
   width: 30vw;
@@ -16,6 +17,7 @@
   border-radius: 20px;
   top: 40%;
   left: 40%;
+  font-size: 1.2em;
   background-color: rgba(255, 255, 255, 0.35);
   backdrop-filter: blur(2px);
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
@@ -32,9 +34,16 @@
   font-size: 20px;
 }
 
+input:invalid {
+  border: 2px dashed red;
+  background-color: red;
+}
+
 .footer {
   padding: 1rem 0;
   padding-bottom: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=modal.module.css.map */
